--- a/src/main/res/layout/youtube_view.xml
+++ b/src/main/res/layout/youtube_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
+    <FrameLayout
         android:id="@+id/tv_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
